--- a/public/styles.css
+++ b/public/styles.css
@@ -128,7 +128,7 @@ p {
   width: 100vw;
   height: 100vh;
   display: grid;
-  grid-template-columns: 3fr 7fr;
+  grid-template-columns: 3fr 8fr;
   grid-template-rows: 7fr 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
@@ -281,6 +281,55 @@ a:hover {
 
 .artist_cover + div h5 {
   padding-bottom: 4px;
+}
+
+/* Search Component */
+
+.search_box {
+  margin: 8px 32px;
+  color: #ffffff;
+}
+
+.search_container {
+  margin-bottom: 32px;
+  padding: 16px;
+  background-color: #242424;
+  display: flex;
+  align-items: center;
+  width: 20vw;
+  border: 1px solid transparent;
+  border-radius: 64px;
+}
+
+.search_container span {
+  color: #b3b3b3;
+  margin: 0 10px;
+}
+
+.search_container:hover span {
+  color: #ffffff;
+}
+
+.search_field {
+  color: #ffffff;
+  width: 100%;
+  background-color: transparent;
+  border: 0;
+}
+
+.search_field:focus {
+  border: none;
+  outline: none;
+}
+
+.search_container:has(.search_field:focus) {
+  border: 1px solid #ffffff;
+}
+
+.search_container:hover {
+  cursor: text;
+  background-color: #2b2b2b;
+  outline: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 /* CSS for Tablet */
