--- a/src/app.css
+++ b/src/app.css
@@ -258,9 +258,9 @@ a:hover {
 }
 
 .album {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 6fr 3fr 1fr;
   align-items: center;
-  justify-content: space-between;
 }
 
 .album:hover {
@@ -437,6 +437,19 @@ a:hover {
 
 .display_info {
   margin-left: 32px;
+}
+
+.expanded_tracks_container {
+  margin: 24px;
+}
+
+.expanded_tracks_header {
+  display: grid;
+  grid-template-columns: 6fr 6fr 3fr 1fr;
+}
+
+.expanded_tracks_container .album {
+  margin-bottom: 16px;
 }
 
 /* CSS for Tablet */
